nextest-runner/src/list/snapshots/nextest_runner__list__test_list__tests__invalid_suffix_error.snap
---
source: nextest-runner/src/list/test_list.rs
expression: result.unwrap_err()
snapshot_kind: text
---
for `test-package::test-binary`, line "invalid_test: wrong_suffix" did not end with the string ": test" or ": benchmark"
full output:
invalid_test: wrong_suffix
