nextest-runner/src/list/snapshots/nextest_runner__list__test_list__tests__missing_suffix_error.snap
---
source: nextest-runner/src/list/test_list.rs
expression: result.unwrap_err()
snapshot_kind: text
---
for `test-package::test-binary`, line "test_without_suffix" did not end with the string ": test" or ": benchmark"
full output:
test_without_suffix
