nextest-runner/src/list/snapshots/nextest_runner__list__test_list__tests__mixed_tests_and_benchmarks.snap
---
source: nextest-runner/src/list/test_list.rs
expression: results
snapshot_kind: text
---
[
    "test_one",
    "bench_one",
    "test_two",
    "bench_two",
]
