nextest-runner/src/list/snapshots/nextest_runner__list__test_list__tests__partial_valid_error.snap
---
source: nextest-runner/src/list/test_list.rs
expression: result.unwrap_err()
snapshot_kind: text
---
for `test-package::test-binary`, line "invalid_line" did not end with the string ": test" or ": benchmark"
full output:
valid_test: test
invalid_line
another_valid: benchmark
