nextest-runner/src/list/snapshots/nextest_runner__list__test_list__tests__special_characters.snap
---
source: nextest-runner/src/list/test_list.rs
expression: results
snapshot_kind: text
---
[
    "test_with_underscore_123",
    "test::with::colons",
    "test_with_numbers_42",
]
