nextest-runner/src/list/snapshots/nextest_runner__list__test_list__tests__valid_benchmarks.snap
---
source: nextest-runner/src/list/test_list.rs
expression: results
snapshot_kind: text
---
[
    "simple_bench",
    "benches::module::my_benchmark",
]
