nextest-runner/src/list/snapshots/nextest_runner__list__test_list__tests__valid_tests.snap
---
source: nextest-runner/src/list/test_list.rs
expression: results
snapshot_kind: text
---
[
    "simple_test",
    "module::nested_test",
    "deeply::nested::module::test_name",
]
